// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 hrhkGQ"
    id={null}
    rows={null}
  >
    <div />
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 jDhdpv"
      id="storyshots_183"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Media Block
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              The body content goes here.  The media content is over there. →
            </p>
          </section>
        </section>
      </section>
    </div>
    <div />
  </section>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 hxFwgy Card__CardGridWrapper-sc-1g3s676-4 dHSMJc"
    id={null}
    rows={null}
  >
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_184"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Modern Exterior
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              In life you need colors. We'll put a happy little sky in here.
            </p>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_185"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Outdoor Passthrough
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              If we're going to have animals around we all have to be concerned about them and take care of them.
            </p>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_186"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Modern Study
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              Here's another little happy bush Let's put some happy little bushes on the other side now.
            </p>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_187"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Dr. Henry Walton 'Indiana' Jones, Jr.
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              Let's get wild today. See how easy it is to create a little tree right in your world.
            </p>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_188"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Jimmy 'The Kid'
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              The only thing worse than yellow snow is green snow.
            </p>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_189"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Peter Parker
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              We want to use a lot pressure while using no pressure at all.
            </p>
          </section>
        </section>
      </section>
    </div>
  </section>
</div>
`;

exports[` 3`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 hxFwgy Card__CardGridWrapper-sc-1g3s676-4 dHSMJc"
    id={null}
    rows={null}
  >
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_190"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Modern Exterior
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              In life you need colors. We'll put a happy little sky in here.
            </p>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_191"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Outdoor Passthrough
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              If we're going to have animals around we all have to be concerned about them and take care of them.
            </p>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_192"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Modern Study
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              Here's another little happy bush Let's put some happy little bushes on the other side now.
            </p>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_193"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Dr. Henry Walton 'Indiana' Jones, Jr.
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              Let's get wild today. See how easy it is to create a little tree right in your world.
            </p>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_194"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Jimmy 'The Kid'
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              The only thing worse than yellow snow is green snow.
            </p>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_195"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Peter Parker
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              We want to use a lot pressure while using no pressure at all.
            </p>
          </section>
        </section>
      </section>
    </div>
  </section>
</div>
`;

exports[` 4`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 hxFwgy Card__CardGridWrapper-sc-1g3s676-4 dHSMJc"
    id={null}
    rows={null}
  >
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_196"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Modern Exterior
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              In life you need colors. We'll put a happy little sky in here.
            </p>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_197"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Outdoor Passthrough
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              If we're going to have animals around we all have to be concerned about them and take care of them.
            </p>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_198"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Modern Study
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              Here's another little happy bush Let's put some happy little bushes on the other side now.
            </p>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_199"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Dr. Henry Walton 'Indiana' Jones, Jr.
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              Let's get wild today. See how easy it is to create a little tree right in your world.
            </p>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_200"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Jimmy 'The Kid'
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              The only thing worse than yellow snow is green snow.
            </p>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_201"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Peter Parker
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              We want to use a lot pressure while using no pressure at all.
            </p>
          </section>
        </section>
      </section>
    </div>
  </section>
</div>
`;

exports[` 5`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 hxFwgy Card__CardGridWrapper-sc-1g3s676-4 dHSMJc"
    id={null}
    rows={null}
  >
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_202"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Modern Exterior
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              In life you need colors. We'll put a happy little sky in here.
            </p>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_203"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Outdoor Passthrough
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              If we're going to have animals around we all have to be concerned about them and take care of them.
            </p>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_204"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Modern Study
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              Here's another little happy bush Let's put some happy little bushes on the other side now.
            </p>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_205"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Dr. Henry Walton 'Indiana' Jones, Jr.
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              Let's get wild today. See how easy it is to create a little tree right in your world.
            </p>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_206"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Jimmy 'The Kid'
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              The only thing worse than yellow snow is green snow.
            </p>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_207"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Peter Parker
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              We want to use a lot pressure while using no pressure at all.
            </p>
          </section>
        </section>
      </section>
    </div>
  </section>
</div>
`;

exports[` 6`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 hxFwgy Card__CardGridWrapper-sc-1g3s676-4 dHSMJc"
    id={null}
    rows={null}
  >
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_208"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              xSmall
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              We want to use a lot pressure while using no pressure at all.
            </p>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_209"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Small
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              We want to use a lot pressure while using no pressure at all.
            </p>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_210"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Default
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              We want to use a lot pressure while using no pressure at all.
            </p>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_211"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Large
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              We want to use a lot pressure while using no pressure at all.
            </p>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_212"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              xLarge
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              We want to use a lot pressure while using no pressure at all.
            </p>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_213"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              2xLarge
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              We want to use a lot pressure while using no pressure at all.
            </p>
          </section>
        </section>
      </section>
    </div>
  </section>
</div>
`;

exports[` 7`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 hxFwgy Card__CardGridWrapper-sc-1g3s676-4 dHSMJc"
    id={null}
    rows={null}
  >
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_214"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 iGaTIK"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 bTbgcI"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              User
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              In life you need colors. We'll put a happy little sky in here.
            </p>
          </section>
        </section>
        <section
          className="MediaBlock__MediaThumb-k78dm4-2 crIEBQ"
          title="User"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-user-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 ioOogp MediaBlock__MediaIcon-k78dm4-6 dAmrft"
            color="brand1"
            data-icon="user-circle"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 496 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M248 104c-53 0-96 43-96 96s43 96 96 96 96-43 96-96-43-96-96-96zm0 144c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48-21.5 48-48 48zm0-240C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 448c-49.7 0-95.1-18.3-130.1-48.4 14.9-23 40.4-38.6 69.6-39.5 20.8 6.4 40.6 9.6 60.5 9.6s39.7-3.1 60.5-9.6c29.2 1 54.7 16.5 69.6 39.5-35 30.1-80.4 48.4-130.1 48.4zm162.7-84.1c-24.4-31.4-62.1-51.9-105.1-51.9-10.2 0-26 9.6-57.6 9.6-31.5 0-47.4-9.6-57.6-9.6-42.9 0-80.6 20.5-105.1 51.9C61.9 339.2 48 299.2 48 256c0-110.3 89.7-200 200-200s200 89.7 200 200c0 43.2-13.9 83.2-37.3 115.9z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_215"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 iGaTIK"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 bTbgcI"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Home
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              If we're going to have animals around we all have to be concerned about them and take care of them.
            </p>
          </section>
        </section>
        <section
          className="MediaBlock__MediaThumb-k78dm4-2 crIEBQ"
          title="Home"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-home-alt fa-w-18 Icon__StyledIcon-sc-1oa9m1v-1 ioOogp MediaBlock__MediaIcon-k78dm4-6 dAmrft"
            color="brand1"
            data-icon="home-alt"
            data-prefix="fas"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 576 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_216"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 iGaTIK"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 bTbgcI"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Bookmark
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              Here's another little happy bush Let's put some happy little bushes on the other side now.
            </p>
          </section>
        </section>
        <section
          className="MediaBlock__MediaThumb-k78dm4-2 crIEBQ"
          title="Bookmark"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-bookmark fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 ioOogp MediaBlock__MediaIcon-k78dm4-6 dAmrft"
            color="brand1"
            data-icon="bookmark"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 384 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M336 0H48C21.49 0 0 21.49 0 48v464l192-112 192 112V48c0-26.51-21.49-48-48-48zm0 428.43l-144-84-144 84V54a6 6 0 0 1 6-6h276c3.314 0 6 2.683 6 5.996V428.43z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_217"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 iGaTIK"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 bTbgcI"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Print
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              Let's get wild today. See how easy it is to create a little tree right in your world.
            </p>
          </section>
        </section>
        <section
          className="MediaBlock__MediaThumb-k78dm4-2 crIEBQ"
          title="Print"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-print fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 ioOogp MediaBlock__MediaIcon-k78dm4-6 dAmrft"
            color="brand1"
            data-icon="print"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M400 264c-13.25 0-24 10.74-24 24 0 13.25 10.75 24 24 24s24-10.75 24-24c0-13.26-10.75-24-24-24zm32-88V99.88c0-12.73-5.06-24.94-14.06-33.94l-51.88-51.88c-9-9-21.21-14.06-33.94-14.06H110.48C93.64 0 80 14.33 80 32v144c-44.18 0-80 35.82-80 80v128c0 8.84 7.16 16 16 16h64v96c0 8.84 7.16 16 16 16h320c8.84 0 16-7.16 16-16v-96h64c8.84 0 16-7.16 16-16V256c0-44.18-35.82-80-80-80zM128 48h192v48c0 8.84 7.16 16 16 16h48v64H128V48zm256 416H128v-64h256v64zm80-112H48v-96c0-17.64 14.36-32 32-32h352c17.64 0 32 14.36 32 32v96z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_218"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 iGaTIK"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 bTbgcI"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              File
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              The only thing worse than yellow snow is green snow.
            </p>
          </section>
        </section>
        <section
          className="MediaBlock__MediaThumb-k78dm4-2 crIEBQ"
          title="File"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-file-alt fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 ioOogp MediaBlock__MediaIcon-k78dm4-6 dAmrft"
            color="brand1"
            data-icon="file-alt"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 384 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M288 248v28c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-28c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm-12 72H108c-6.6 0-12 5.4-12 12v28c0 6.6 5.4 12 12 12h168c6.6 0 12-5.4 12-12v-28c0-6.6-5.4-12-12-12zm108-188.1V464c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V48C0 21.5 21.5 0 48 0h204.1C264.8 0 277 5.1 286 14.1L369.9 98c9 8.9 14.1 21.2 14.1 33.9zm-128-80V128h76.1L256 51.9zM336 464V176H232c-13.3 0-24-10.7-24-24V48H48v416h288z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_219"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 iGaTIK"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 bTbgcI"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Location
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              The only thing worse than yellow snow is green snow.
            </p>
          </section>
        </section>
        <section
          className="MediaBlock__MediaThumb-k78dm4-2 crIEBQ"
          title="Location"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-map-marker-alt fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 ioOogp MediaBlock__MediaIcon-k78dm4-6 dAmrft"
            color="brand1"
            data-icon="map-marker-alt"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 384 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M192 0C85.903 0 0 86.014 0 192c0 71.117 23.991 93.341 151.271 297.424 18.785 30.119 62.694 30.083 81.457 0C360.075 285.234 384 263.103 384 192 384 85.903 297.986 0 192 0zm0 464C64.576 259.686 48 246.788 48 192c0-79.529 64.471-144 144-144s144 64.471 144 144c0 54.553-15.166 65.425-144 272zm-80-272c0-44.183 35.817-80 80-80s80 35.817 80 80-35.817 80-80 80-80-35.817-80-80z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </section>
      </section>
    </div>
  </section>
</div>
`;

exports[` 8`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 dosTFQ Card__CardGridWrapper-sc-1g3s676-4 dJZbYX"
    id={null}
    rows={null}
  >
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_220"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Parent Block
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              We want to use a lot pressure while using no pressure at all.
            </p>
          </section>
        </section>
        <section
          className="MediaBlock__ChildWrapper-k78dm4-7 guFbzg"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
            id={null}
            rows={null}
          >
            <section
              className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
              id={null}
              rows={null}
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
                id={null}
                rows={null}
              >
                <h5
                  className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
                  fontSize="1.15rem"
                  fontWeight="500"
                  letterSpacing="0.4px"
                >
                  Child Block
                </h5>
                <p
                  className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
                  fontSize="1rem"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0.5px"
                >
                  We want to use a lot pressure while using no pressure at all.
                </p>
              </section>
            </section>
            <section
              className="MediaBlock__ChildWrapper-k78dm4-7 guFbzg"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
                id={null}
                rows={null}
              >
                <section
                  className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
                  id={null}
                  rows={null}
                >
                  <section
                    className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
                    id={null}
                    rows={null}
                  >
                    <h5
                      className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
                      fontSize="1.15rem"
                      fontWeight="500"
                      letterSpacing="0.4px"
                    >
                      Child Block
                    </h5>
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      We want to use a lot pressure while using no pressure at all.
                    </p>
                  </section>
                </section>
              </section>
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
                id={null}
                rows={null}
              >
                <section
                  className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
                  id={null}
                  rows={null}
                >
                  <section
                    className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
                    id={null}
                    rows={null}
                  >
                    <h5
                      className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
                      fontSize="1.15rem"
                      fontWeight="500"
                      letterSpacing="0.4px"
                    >
                      Child Block
                    </h5>
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      We want to use a lot pressure while using no pressure at all.
                    </p>
                  </section>
                </section>
              </section>
            </section>
          </section>
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
            id={null}
            rows={null}
          >
            <section
              className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
              id={null}
              rows={null}
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
                id={null}
                rows={null}
              >
                <h5
                  className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
                  fontSize="1.15rem"
                  fontWeight="500"
                  letterSpacing="0.4px"
                >
                  Child Block
                </h5>
                <p
                  className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
                  fontSize="1rem"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0.5px"
                >
                  We want to use a lot pressure while using no pressure at all.
                </p>
              </section>
            </section>
            <section
              className="MediaBlock__ChildWrapper-k78dm4-7 guFbzg"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
                id={null}
                rows={null}
              >
                <section
                  className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
                  id={null}
                  rows={null}
                >
                  <section
                    className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
                    id={null}
                    rows={null}
                  >
                    <h5
                      className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
                      fontSize="1.15rem"
                      fontWeight="500"
                      letterSpacing="0.4px"
                    >
                      Child Block
                    </h5>
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      We want to use a lot pressure while using no pressure at all.
                    </p>
                  </section>
                </section>
              </section>
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
                id={null}
                rows={null}
              >
                <section
                  className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
                  id={null}
                  rows={null}
                >
                  <section
                    className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
                    id={null}
                    rows={null}
                  >
                    <h5
                      className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
                      fontSize="1.15rem"
                      fontWeight="500"
                      letterSpacing="0.4px"
                    >
                      Child Block
                    </h5>
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      We want to use a lot pressure while using no pressure at all.
                    </p>
                  </section>
                </section>
              </section>
            </section>
          </section>
        </section>
      </section>
    </div>
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 gMgGet Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_221"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 iGaTIK"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 bTbgcI"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Parent Block
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              We want to use a lot pressure while using no pressure at all.
            </p>
          </section>
        </section>
        <section
          className="MediaBlock__MediaThumb-k78dm4-2 crIEBQ"
          title="Parent Block"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-user-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 ioOogp MediaBlock__MediaIcon-k78dm4-6 dAmrft"
            color="brand1"
            data-icon="user-circle"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 496 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M248 104c-53 0-96 43-96 96s43 96 96 96 96-43 96-96-43-96-96-96zm0 144c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48-21.5 48-48 48zm0-240C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 448c-49.7 0-95.1-18.3-130.1-48.4 14.9-23 40.4-38.6 69.6-39.5 20.8 6.4 40.6 9.6 60.5 9.6s39.7-3.1 60.5-9.6c29.2 1 54.7 16.5 69.6 39.5-35 30.1-80.4 48.4-130.1 48.4zm162.7-84.1c-24.4-31.4-62.1-51.9-105.1-51.9-10.2 0-26 9.6-57.6 9.6-31.5 0-47.4-9.6-57.6-9.6-42.9 0-80.6 20.5-105.1 51.9C61.9 339.2 48 299.2 48 256c0-110.3 89.7-200 200-200s200 89.7 200 200c0 43.2-13.9 83.2-37.3 115.9z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </section>
        <section
          className="MediaBlock__ChildWrapper-k78dm4-7 dtXxkB"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 iGaTIK"
            id={null}
            rows={null}
          >
            <section
              className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 bTbgcI"
              id={null}
              rows={null}
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
                id={null}
                rows={null}
              >
                <h5
                  className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
                  fontSize="1.15rem"
                  fontWeight="500"
                  letterSpacing="0.4px"
                >
                  Child Block
                </h5>
                <p
                  className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
                  fontSize="1rem"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0.5px"
                >
                  We want to use a lot pressure while using no pressure at all.
                </p>
              </section>
            </section>
            <section
              className="MediaBlock__MediaThumb-k78dm4-2 crIEBQ"
              title="Child Block"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-bookmark fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 ioOogp MediaBlock__MediaIcon-k78dm4-6 dAmrft"
                color="brand1"
                data-icon="bookmark"
                data-prefix="far"
                focusable="false"
                fontSize="inherit"
                id={null}
                role="img"
                style={Object {}}
                viewBox="0 0 384 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M336 0H48C21.49 0 0 21.49 0 48v464l192-112 192 112V48c0-26.51-21.49-48-48-48zm0 428.43l-144-84-144 84V54a6 6 0 0 1 6-6h276c3.314 0 6 2.683 6 5.996V428.43z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </section>
            <section
              className="MediaBlock__ChildWrapper-k78dm4-7 dtXxkB"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 iGaTIK"
                id={null}
                rows={null}
              >
                <section
                  className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 bTbgcI"
                  id={null}
                  rows={null}
                >
                  <section
                    className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
                    id={null}
                    rows={null}
                  >
                    <h5
                      className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
                      fontSize="1.15rem"
                      fontWeight="500"
                      letterSpacing="0.4px"
                    >
                      Child Block
                    </h5>
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      We want to use a lot pressure while using no pressure at all.
                    </p>
                  </section>
                </section>
                <section
                  className="MediaBlock__MediaThumb-k78dm4-2 crIEBQ"
                  title="Child Block"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-info-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 ioOogp MediaBlock__MediaIcon-k78dm4-6 dAmrft"
                    color="brand1"
                    data-icon="info-circle"
                    data-prefix="far"
                    focusable="false"
                    fontSize="inherit"
                    id={null}
                    role="img"
                    style={Object {}}
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm0-338c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                      fill="currentColor"
                      style={Object {}}
                    />
                  </svg>
                </section>
              </section>
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 iGaTIK"
                id={null}
                rows={null}
              >
                <section
                  className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 bTbgcI"
                  id={null}
                  rows={null}
                >
                  <section
                    className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
                    id={null}
                    rows={null}
                  >
                    <h5
                      className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
                      fontSize="1.15rem"
                      fontWeight="500"
                      letterSpacing="0.4px"
                    >
                      Child Block
                    </h5>
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      We want to use a lot pressure while using no pressure at all.
                    </p>
                  </section>
                </section>
                <section
                  className="MediaBlock__MediaThumb-k78dm4-2 crIEBQ"
                  title="Child Block"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-exclamation fa-w-6 Icon__StyledIcon-sc-1oa9m1v-1 ioOogp MediaBlock__MediaIcon-k78dm4-6 dAmrft"
                    color="brand1"
                    data-icon="exclamation"
                    data-prefix="fas"
                    focusable="false"
                    fontSize="inherit"
                    id={null}
                    role="img"
                    style={Object {}}
                    viewBox="0 0 192 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M176 432c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80zM25.26 25.199l13.6 272C39.499 309.972 50.041 320 62.83 320h66.34c12.789 0 23.331-10.028 23.97-22.801l13.6-272C167.425 11.49 156.496 0 142.77 0H49.23C35.504 0 24.575 11.49 25.26 25.199z"
                      fill="currentColor"
                      style={Object {}}
                    />
                  </svg>
                </section>
              </section>
            </section>
          </section>
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 iGaTIK"
            id={null}
            rows={null}
          >
            <section
              className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 bTbgcI"
              id={null}
              rows={null}
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
                id={null}
                rows={null}
              >
                <h5
                  className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
                  fontSize="1.15rem"
                  fontWeight="500"
                  letterSpacing="0.4px"
                >
                  Child Block
                </h5>
                <p
                  className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
                  fontSize="1rem"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0.5px"
                >
                  We want to use a lot pressure while using no pressure at all.
                </p>
              </section>
            </section>
            <section
              className="MediaBlock__MediaThumb-k78dm4-2 crIEBQ"
              title="Child Block"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-home-alt fa-w-18 Icon__StyledIcon-sc-1oa9m1v-1 ioOogp MediaBlock__MediaIcon-k78dm4-6 dAmrft"
                color="brand1"
                data-icon="home-alt"
                data-prefix="fas"
                focusable="false"
                fontSize="inherit"
                id={null}
                role="img"
                style={Object {}}
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </section>
            <section
              className="MediaBlock__ChildWrapper-k78dm4-7 dtXxkB"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 iGaTIK"
                id={null}
                rows={null}
              >
                <section
                  className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 bTbgcI"
                  id={null}
                  rows={null}
                >
                  <section
                    className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
                    id={null}
                    rows={null}
                  >
                    <h5
                      className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
                      fontSize="1.15rem"
                      fontWeight="500"
                      letterSpacing="0.4px"
                    >
                      Child Block
                    </h5>
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      We want to use a lot pressure while using no pressure at all.
                    </p>
                  </section>
                </section>
                <section
                  className="MediaBlock__MediaThumb-k78dm4-2 crIEBQ"
                  title="Child Block"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-star fa-w-18 Icon__StyledIcon-sc-1oa9m1v-1 ioOogp MediaBlock__MediaIcon-k78dm4-6 dAmrft"
                    color="brand1"
                    data-icon="star"
                    data-prefix="far"
                    focusable="false"
                    fontSize="inherit"
                    id={null}
                    role="img"
                    style={Object {}}
                    viewBox="0 0 576 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
                      fill="currentColor"
                      style={Object {}}
                    />
                  </svg>
                </section>
              </section>
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 iGaTIK"
                id={null}
                rows={null}
              >
                <section
                  className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 bTbgcI"
                  id={null}
                  rows={null}
                >
                  <section
                    className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
                    id={null}
                    rows={null}
                  >
                    <h5
                      className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
                      fontSize="1.15rem"
                      fontWeight="500"
                      letterSpacing="0.4px"
                    >
                      Child Block
                    </h5>
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      We want to use a lot pressure while using no pressure at all.
                    </p>
                  </section>
                </section>
                <section
                  className="MediaBlock__MediaThumb-k78dm4-2 crIEBQ"
                  title="Child Block"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-envelope fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 ioOogp MediaBlock__MediaIcon-k78dm4-6 dAmrft"
                    color="brand1"
                    data-icon="envelope"
                    data-prefix="far"
                    focusable="false"
                    fontSize="inherit"
                    id={null}
                    role="img"
                    style={Object {}}
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm0 48v40.805c-22.422 18.259-58.168 46.651-134.587 106.49-16.841 13.247-50.201 45.072-73.413 44.701-23.208.375-56.579-31.459-73.413-44.701C106.18 199.465 70.425 171.067 48 152.805V112h416zM48 400V214.398c22.914 18.251 55.409 43.862 104.938 82.646 21.857 17.205 60.134 55.186 103.062 54.955 42.717.231 80.509-37.199 103.053-54.947 49.528-38.783 82.032-64.401 104.947-82.653V400H48z"
                      fill="currentColor"
                      style={Object {}}
                    />
                  </svg>
                </section>
              </section>
            </section>
          </section>
        </section>
      </section>
    </div>
  </section>
</div>
`;

exports[` 9`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 hrhkGQ"
    id={null}
    rows={null}
  >
    <div />
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 jDhdpv"
      id="storyshots_222"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP MediaBlock__Block-k78dm4-0 bLoQWa"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq MediaBlock__Body-k78dm4-3 lnXgVo"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv"
            id={null}
            rows={null}
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 dTLbTf MediaBlock__MediaTitle-k78dm4-4 kzZoVI"
              fontSize="1.15rem"
              fontWeight="500"
              letterSpacing="0.4px"
            >
              Media Block
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK MediaBlock__MediaDescription-k78dm4-5 kOizkX"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              The body content goes here.  The media content is over there. →
            </p>
          </section>
        </section>
      </section>
    </div>
    <div />
  </section>
</div>
`;
